<resources>
    <string name="app_name">Test Online Shop</string>
    <string name="fragment_main">Главная</string>
    <string name="fragment_registration">Вход</string>
    <string name="fragment_catalogue">Каталог</string>
    <string name="fragment_cart">Корзина</string>
    <string name="fragment_discounts">Акции</string>
    <string name="fragment_profile">Личный кабинет</string>
    <string name="fragment_favorites">Избранное</string>
    <string name="text_input_name">Имя</string>
    <string name="text_input_surname">Фамилия</string>
    <string name="input_text_phone">Телефон</string>
    <string name="button_enter">Войти</string>
    <string name="loyalty_program_text">Нажимая кнопку "Войти", Вы принимаете\n<u>условия программы лояльности</u></string>
    <string name="chip_all">Смотреть все</string>
    <string name="chip_face">Лицо</string>
    <string name="chip_body">Тело</string>
    <string name="chip_suntan">Загар</string>
    <string name="chip_mask">Маски</string>
    <string name="button_filters">Фильтры</string>
    <string name="sort_popular">По популярности</string>
    <string name="sort_price_down">По уменьшению цены</string>
    <string name="sort_price_up">По возрастанию цены</string>
    <string name="button_menu_main">Главная</string>
    <string name="button_menu_catalogue">Каталог</string>
    <string name="button_menu_cart">Корзина</string>
    <string name="button_menu_discounts">Акции</string>
    <string name="button_menu_profile">Профиль</string>
    <string name="main_fragment_placeholder">Здесь раздел "Главная"</string>
    <string name="cart_fragment_placeholder">Здесь раздел "Корзина"</string>
    <string name="discounts_fragment_placeholder">Здесь раздел "Акции"</string>
    <string name="button_exit">Выйти</string>
    <string name="label_favorites">Избранное</string>
    <string name="label_shops">Магазины</string>
    <string name="label_feedback">Обратная связь</string>
    <string name="label_legal">Оферта</string>
    <string name="label_refund">Возврат товара</string>
    <string name="profile_name">%1$s %2$s</string>
    <string name="tab_products">Товары</string>
    <string name="tab_brands">Бренды</string>
    <string name="label_description">Описание</string>
    <string name="button_hide">Скрыть</string>
    <string name="label_characteristics">Характеристики</string>
    <string name="label_contents">Состав</string>
    <string name="button_more">Подробнее</string>
    <string name="add_to_cart">Добавить в корзину</string>
</resources>