<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_main"
        android:enabled="true"
        android:icon="@drawable/icon_main"
        android:title="@string/button_menu_main"/>
    <item
        android:id="@+id/menu_catalogue"
        android:enabled="true"
        android:icon="@drawable/icon_catalogue"
        android:title="@string/button_menu_catalogue"/>
    <item
        android:id="@+id/menu_cart"
        android:enabled="true"
        android:icon="@drawable/icon_cart"
        android:title="@string/button_menu_cart"/>
    <item
        android:id="@+id/menu_discounts"
        android:enabled="true"
        android:icon="@drawable/icon_discounts"
        android:title="@string/button_menu_discounts"/>
    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:icon="@drawable/icon_profile"
        android:title="@string/button_menu_profile"/>
</menu>