<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/fragment_container">

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textStyle="bold" />

</androidx.appcompat.widget.Toolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:navGraph ="@navigation/nav_main"
        app:defaultNavHost ="true"
        tools:context=".MainActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/menu"/>

<LinearLayout
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/text_margin_6dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:visibility="gone"
    app:flow_horizontalGap="43dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/fragment_container"
    >

    <Button
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MenuButton"
        android:text="@string/button_menu_main"
        android:textColor="@color/pink"
        app:icon = "@drawable/icon_main"
        app:iconTint = "@color/pink"
        />
    <Button
        android:id="@+id/button_catalogue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MenuButton"
        android:text="@string/button_menu_catalogue"
        app:icon = "@drawable/icon_catalogue"
        />
    <Button
        android:id="@+id/button_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MenuButton"
        android:text="@string/button_menu_cart"
        app:icon = "@drawable/icon_cart"
        />
    <Button
        android:id="@+id/button_discounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MenuButton"
        android:text="@string/button_menu_discounts"
        app:icon = "@drawable/icon_discounts"
        />
    <Button
        android:id="@+id/button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MenuButton"
        android:text="@string/button_menu_profile"
        android:layout_marginEnd="0dp"
        app:icon = "@drawable/icon_profile"
        />
</LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout >