<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CatalogueFragment"
    android:background="@color/white">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sort_spinner"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_filter"
        app:layout_constraintBottom_toBottomOf="@id/button_filter"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="0dp"
        app:startIconDrawable="@drawable/icon_sort_by"
        app:endIconDrawable="@drawable/icon_down_arrow"
        >

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:simpleItems="@array/sort"
            android:inputType="none"
            android:textSize="14sp"
            android:padding="0dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/filter_scroll"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:text="@string/button_filters"
        app:icon ="@drawable/icon_filter"
        android:textSize="@dimen/size_text_title2"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        app:iconTint = "@color/black"
        />

    <HorizontalScrollView
        android:id="@+id/filter_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_filter"
        app:layout_constraintBottom_toTopOf="@id/catalogue_items"
        android:layout_marginStart="@dimen/default_margin_16dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            app:singleSelection="true"
            app:chipSpacingHorizontal="@dimen/chip_spacing">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_all"
                style="@style/ChipFilter"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_face"
                style="@style/ChipFilter"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_body"
                style="@style/ChipFilter"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_suntan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_suntan"
                style="@style/ChipFilter"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_mask"
                style="@style/ChipFilter"
                />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/catalogue_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/default_margin_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_scroll"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/card_catalogue_element"
        />

</androidx.constraintlayout.widget.ConstraintLayout>