<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_profile_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_profile_button_49dp"
        android:layout_marginHorizontal="@dimen/default_margin_16dp"
        android:layout_marginTop="@dimen/big_margin_32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/light_grey_bg"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ProfileButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin_6dp"
            android:layout_marginStart="@dimen/default_margin_16dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:background="@android:color/transparent"
            android:textSize="@dimen/size_text_title2"
            app:layout_constraintStart_toEndOf="@id/profile_icon"
            app:layout_constraintBottom_toTopOf="@id/phone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Мария Иванова"
            />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textSize="@dimen/size_text_caption"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="+ 7 993 877 44 02"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_profile_exit"
            android:layout_margin="@dimen/small_margin_8dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_button_favorite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_profile_button_49dp"
        android:layout_marginHorizontal="@dimen/default_margin_16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_profile_button"
        >

        <Button
            android:id="@+id/button_favorite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ProfileButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:id="@+id/icon_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_favorite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/favorite_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/favorite_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin_6dp"
            android:layout_marginStart="@dimen/default_margin_16dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:background="@android:color/transparent"
            android:textSize="@dimen/size_text_title2"
            android:text="@string/label_favorites"
            app:layout_constraintStart_toEndOf="@id/icon_favorite"
            app:layout_constraintBottom_toTopOf="@id/favorite_amount"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <TextView
            android:id="@+id/favorite_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textSize="@dimen/size_text_caption"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="@id/favorite_label"
            app:layout_constraintTop_toBottomOf="@id/favorite_label"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="1 товар"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_arrow_right"
            android:layout_margin="@dimen/small_margin_8dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_button_shops"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_profile_button_49dp"
        android:layout_marginHorizontal="@dimen/default_margin_16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_button_favorite"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ProfileButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:id="@+id/icon_shops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_shops"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_16dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:background="@android:color/transparent"
            android:textSize="@dimen/size_text_title2"
            android:text="@string/label_shops"
            app:layout_constraintStart_toEndOf="@id/icon_shops"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_arrow_right"
            android:layout_margin="@dimen/small_margin_8dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_button_feedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_profile_button_49dp"
        android:layout_marginHorizontal="@dimen/default_margin_16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_button_shops"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ProfileButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:id="@+id/icon_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_feedback"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_16dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:background="@android:color/transparent"
            android:textSize="@dimen/size_text_title2"
            android:text="@string/label_feedback"
            app:layout_constraintStart_toEndOf="@id/icon_feedback"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_arrow_right"
            android:layout_margin="@dimen/small_margin_8dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_button_legal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_profile_button_49dp"
        android:layout_marginHorizontal="@dimen/default_margin_16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_button_feedback"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ProfileButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:id="@+id/icon_legal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_legal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_16dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:background="@android:color/transparent"
            android:textSize="@dimen/size_text_title2"
            android:text="@string/label_legal"
            app:layout_constraintStart_toEndOf="@id/icon_legal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_arrow_right"
            android:layout_margin="@dimen/small_margin_8dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_button_refund"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_profile_button_49dp"
        android:layout_marginHorizontal="@dimen/default_margin_16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_button_legal"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ProfileButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:id="@+id/icon_refund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_refund"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_16dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:background="@android:color/transparent"
            android:textSize="@dimen/size_text_title2"
            android:text="@string/label_refund"
            app:layout_constraintStart_toEndOf="@id/icon_refund"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_arrow_right"
            android:layout_margin="@dimen/small_margin_8dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginHorizontal="@dimen/default_margin_16dp"
        android:layout_marginBottom="@dimen/big_margin_32dp"
        style="@style/ProfileButton"
        android:text="@string/button_exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>